# chess-interpreter

./: .gitignore  Cargo.toml  README.md  shell.nix
.devcontainer/: Dockerfile  devcontainer.json
crates/ci-core/: Cargo.toml
crates/ci-core/src/: game.rs  lib.rs  piece.rs  square.rs
crates/ci-png-parser/: Cargo.toml  README.md
crates/ci-png-parser/src/: lib.rs  move_type.rs  piece.rs  png_move.rs
crates/ci-viewer/: Cargo.toml
crates/ci-viewer/src/: bin.rs
examples/: game.pgn  parse.rs
scripts/: split_games.js
src/: game.rs  lib.rs
src/lib/: board.rs  file.rs  game.rs  lib.rs  piece.rs  rank.rs  square.rs
src/lib/parser/: pgn.rs
src/parser/: pgn.rs
src/viewer/: bin.rs
tests/: integration_test.rs
tests/fixtures/: no_show.pgn
