[package]
name = "chess"
version = "0.1.0"
authors = ["Jeffrey van Hoven <contact@jvhoven.nl>"]
edition = "2018"

[lib]
name = "lib"
path = "src/lib/lib.rs"

[[bin]]
name = "viewer"
path = "src/viewer/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
lazy_static = "1.4.0"
raqote = "0.8.0"
font-kit = "0.10.0"
minifb = "0.20.0"
png = { version = "0.17.2" }

[dev-dependencies]
glob = "0.3.0"