[workspace.package]
version = "0.0.1"
authors = ["Jeffrey van Hoven <contact@jvhoven.nl"]
edition = "2021"
description = "Chess interpreter which allows you to view played chess games"
license = "MIT"
rust-version = "1.68"

[workspace]
members = [
  "crates/ci-core",
  "crates/ci-png-parser",
  "crates/ci-viewer",
]