[package]
name = "ci_viewer"
version.workspace = true
authors.workspace = true
edition.workspace = true

[[bin]]
name = "viewer"
path = "./src/bin.rs"

[dependencies]
ci_core = { path = "../ci-core" }
egui = "0.21.0"
egui_extras = { version = "0.21.0", features=["svg"] }
eframe = "0.21.3"
lazy_static = "1.4.0"